# duke-dcc-mcp

./: .dockerignore  .gitignore  AI-gateway.py  LICENSE  README.md  app.py  deployment.yaml  dockerfile  duke-dcc-mcp.py  environment.yml  mcp_client.py  mlflow_test.py  ui.py
ansible/: bastion.yml
bazel/: BUILD.bazel  WORKSPACE
kubernetes/: cleanup.sh  deployment.yaml  limitrange.yaml  namespace.yaml  networkpolicy.yaml  onboard.sh  pvc.yaml  resourcequota.yaml  service.yaml  serviceaccount-rbac.yaml
mlruns/0/: meta.yaml
mlruns/0/3f2de216e39040efb120d8592190f634/: meta.yaml
mlruns/0/3f2de216e39040efb120d8592190f634/metrics/: accuracy
mlruns/0/3f2de216e39040efb120d8592190f634/outputs/m-f60c6af21b0e4b638da8b491dc0ff298/: meta.yaml
mlruns/0/3f2de216e39040efb120d8592190f634/tags/: mlflow.runName
mlruns/0/cc0e2edb204e467aa78fd53b828f75c0/: meta.yaml
mlruns/0/cc0e2edb204e467aa78fd53b828f75c0/metrics/: accuracy
mlruns/0/cc0e2edb204e467aa78fd53b828f75c0/outputs/m-77c35e81acc14973a98ba040799613a7/: meta.yaml
mlruns/0/cc0e2edb204e467aa78fd53b828f75c0/tags/: mlflow.runName
mlruns/0/models/m-77c35e81acc14973a98ba040799613a7/: meta.yaml
mlruns/0/models/m-77c35e81acc14973a98ba040799613a7/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlruns/0/models/m-77c35e81acc14973a98ba040799613a7/metrics/: accuracy
mlruns/0/models/m-f60c6af21b0e4b638da8b491dc0ff298/: meta.yaml
mlruns/0/models/m-f60c6af21b0e4b638da8b491dc0ff298/artifacts/: MLmodel
mlruns/0/models/m-f60c6af21b0e4b638da8b491dc0ff298/metrics/: accuracy
mlruns/0/models/m-f60c6af21b0e4b638da8b491dc0ff298/tags/: mlflow.source.git.commit  mlflow.source.name
terraform/: main.tf
terraform/mlruns/0/: meta.yaml
