load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

package(default_visibility = ["//visibility:public"])

# MCP Server Library
py_library(
    name = "mcp_server_lib",
    srcs = [
        "//mcp/server:mcp_suggest_server.py",
        "//mcp/server:otel_instrument.py",
    ],
    deps = [
        "@pypi//fastapi",
        "@pypi//uvicorn",
        "@pypi//pydantic",
        "@pypi//jinja2",
        "@pypi//requests",
        "@pypi//opentelemetry_api",
        "@pypi//opentelemetry_sdk",
        "@pypi//opentelemetry_instrumentation_fastapi",
        "@pypi//opentelemetry_exporter_otlp",
    ],
)

# MCP Server Binary
py_binary(
    name = "mcp_server",
    srcs = ["//mcp/server:mcp_suggest_server.py"],
    main = "mcp_suggest_server.py",
    deps = [":mcp_server_lib"],
)

# Docker Image for MCP Server
py3_image(
    name = "mcp_server_image",
    srcs = ["//mcp/server:mcp_suggest_server.py"],
    base = "@python3_10_image//image",
    main = "mcp_suggest_server.py",
    deps = [":mcp_server_lib"],
    layers = [
        "@pypi//fastapi",
        "@pypi//uvicorn",
        "@pypi//pydantic",
        "@pypi//jinja2",
        "@pypi//requests",
        "@pypi//opentelemetry_api",
        "@pypi//opentelemetry_sdk",
    ],
)

# Push to registry
container_push(
    name = "push_mcp_server",
    format = "Docker",
    image = ":mcp_server_image",
    registry = "registry.duke.edu",
    repository = "duke-mcp/suggestion-server",
    tag = "{BUILD_TAG}",
)

# LiteLLM Integration Library
py_library(
    name = "litellm_tools_lib",
    srcs = ["//litellm-integration/tools:slurm_tool.py"],
    deps = [
        "@pypi//requests",
    ],
)

# Textual Client Binary
py_binary(
    name = "textual_client",
    srcs = ["//client:textual_client.py"],
    main = "textual_client.py",
    deps = [
        "@pypi//textual",
        "@pypi//httpx",
    ],
)

# Unit Tests
py_test(
    name = "mcp_server_test",
    srcs = ["//mcp/server/tests:test_sanitizer.py"],
    deps = [
        ":mcp_server_lib",
        "@pypi//pytest",
        "@pypi//pytest_asyncio",
        "@pypi//httpx",
    ],
)

# OPA Policy Tests
sh_test(
    name = "opa_policy_test",
    srcs = ["//policies/opa/tests:test_policies.sh"],
    data = [
        "//policies/opa:deny_forbidden_commands.rego",
        "//policies/opa:quota_policy.rego",
    ],
)

# Integration Tests
py_test(
    name = "integration_test",
    srcs = ["//tests/integration:test_end_to_end.py"],
    deps = [
        ":mcp_server_lib",
        "@pypi//pytest",
        "@pypi//httpx",
    ],
    size = "medium",
)

# Build all targets
filegroup(
    name = "all",
    srcs = [
        ":mcp_server",
        ":mcp_server_image",
        ":textual_client",
    ],
)